# klargest

./: CMakeLists.txt  README.md  run.sh
data/: test.txt
include/klargest/: contants.hpp  klargest.hpp  pairs.hpp  parser_helper.hpp
scripts/: compare_results.py  test_data_generator.py
src/: #klargest.cpp#  klargest.cpp  main.cpp  parser_helper.cpp
tests/: test_00001000.txt  test_00001000_actual.txt  test_00001000_actual_k20.txt  test_00001000_result_k20.txt  test_00100000.txt  test_00100000_actual_k200.txt  test_00100000_result_k200.txt  test_10000000_actual_k2000.txt  test_10000000_result_k2000.txt
